--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#F7EBE8",
-  "background_color": "#1F24280"
+  "background_color": "#1F2428"
 }
